# r-efi-string

./: .travis.yml  AUTHORS  Cargo.toml  NEWS.md  README.md
src/: lib.rs  str16.rs
