[package]
name = "r-efi-string"
version = "0.1.0"

authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
        "Tom Gundersen <teg@jklm.no>",
]
categories = [
        "embedded",
        "hardware-support",
        "no-std",
        "os",
]
description = "UEFI String Types and Converters"
edition = "2018"
homepage = "https://r-util.github.com/r-efi"
keywords = [
        "efi",
        "firmware",
        "string",
        "uefi",
        "unicode",
]
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/r-util/r-efi-string"

[lib]
# We do not link to an allocator by default, because we allow the crate user to
# select one. This, however, makes `doctest` fall over. Sadly, there is no
# stabilized way to conditionally compile in code for doctests. Therefore, we
# disable them for now. Maybe some day `cfg(doctest)` will be stabilized...
doctest = false
