[package]
name = "r-efi-string"
version = "0.1.0"

authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
        "Tom Gundersen <teg@jklm.no>",
]
categories = [
        "embedded",
        "hardware-support",
        "no-std",
        "os",
]
description = "UEFI String Types and Converters"
edition = "2018"
homepage = "https://github.com/r-efi/r-efi/wiki"
keywords = [
        "efi",
        "firmware",
        "string",
        "uefi",
        "unicode",
]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/r-util/r-efi-string"
